fixes legenda on mobile (RES-18)

--- a/source/scss/_mobile.scss
+++ b/source/scss/_mobile.scss
@@ -70,6 +70,12 @@
 		// display: none;
 	}
 
+	.dpi input {
+		min-width: 0;
+	}
+	.dpi span {
+		font-size: 13px;
+	}
 	.topheader {
 		border-bottom: 0;
 
